add product card

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,9 @@
     },
     "cSpell.ignoreWords": [
         "Amazon",
+        "Maink",
+        "Tshirts",
+        "TshirtsMPage",
         "TshirtsPage"
     ]
 }
