--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-headroom": "^3.2.1",
     "react-i18next": "^14.1.2",
     "react-icons": "^5.1.0",
+    "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
